# ULL_SLL_SA

./: .gitignore  CMakeLists.txt  README.md
examples/: SortedLinkedList.cpp  main.cpp
include/: Exception.h  Execfiles.hpp  Node.hpp  SortedArray.h  SortedArray.hpp  SortedLinkedList.h  SortedLinkedList.hpp  UnrolledLinkedList.h  UnrolledLinkedList.hpp
sources/: Node.cpp  SortedArray.cpp  SortedLinkedList.cpp  UnrolledLinkedList.cpp
tests/: Examples  catch.hpp  insert.cpp  sa_001.ans  sa_001_1.ans  sa_002.ans  sa_002_1.ans  sa_003.ans  sa_003_1.ans  sa_004.ans  sa_005.ans  sa_006.ans  sa_007.ans  sa_008.ans  sa_insert.cpp  sa_minmax.cpp  sa_remove.cpp  sa_search.cpp  search.cpp  sll_001.ans  sll_001_1.ans  sll_002.ans  sll_002__1.ans  sll_003.ans  sll_003_1.ans  sll_004.ans  sll_005.ans  sll_006.ans  sll_007.ans  sll_008.ans  sll_insert.cpp  sll_minmax.cpp  sll_remove.cpp  sll_search.cpp  ull_001.ans  ull_001_1.ans  ull_002.ans  ull_002_1.ans  ull_003.ans  ull_003_1.ans  (+9 more)
